# nvgs

./: Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
data/: intro_page.html  search_page.html
scripts/: build-musl  container-build  container-run
src/: lib.rs  main.rs  terms.rs  user_agent.rs
src/actions/: add.rs  add_source.rs  add_url.rs  add_user.rs  crawl.rs  extract_text.rs  fetch.rs  fetch_sources.rs  index.rs  init.rs  mod.rs  read_warc.rs  search.rs
src/api/: auth.rs  mod.rs
src/cli/: mod.rs
src/db/: crawls.rs  index.rs  mod.rs  sources.rs  term_frequencies.rs  tf_idf.rs  users.rs
