[package]
name = "nvgs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
libflate = "2.1.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
another_rust_warc = { path = "../another_rust_warc" }
scraper = "0.22.0"
rusqlite = "0.33.0"
base64 = "0.22.1"
