[package]
name = "nvgs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
libflate = "2.1.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
another_rust_warc = { version = "0.0.1" }
scraper = "0.22.0"
rusqlite = "0.32.0"
base64 = "0.22.1"
bytes = "1.10.0"
axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-rusqlite = { version = "0.6.0" } #, features = ["bundled-sqlcipher"] }
tower = "0.5.2"
openssl = { version = "0.10", features = ["vendored"] }
async-trait = "0.1.88"
axum-login = "0.17.0"
argon2 = "0.5.3"
